test/expressions/noinit/no-type-split-class.chpl
class C {
  var x;
  proc init() {
    x = noinit;
  }
}

var myC = new C();
